minor hotfix: enabled center playneedle when zooming by default because it's just a better zoom function in general, previously it was off. changed "shortcuts" tab to be called "keyboard" and moved it to the top of the settings tab list. fixed a themes bug on startup where the playneedle was invisible and oak was highlighted despite it being og-dark, now og-dark is highlighted and playneedle is not invisible. fixed a bug where adding a new keyboard shortcut and pressing the key doesn't register, you need to click the box and press the key to register it. now you no longer need to click the box.

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@
   --playhead-glow:  rgba(248, 113, 113, 0.4);
   --input-field:    #2c3349;
   --input-field-bg: #16131a;
+  --playneedle:     #f5f5f5;
   --radius-sm: 4px;
   --radius-md: 6px;
   --radius-lg: 10px;
